apps/shoppingo/overlays/staging/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shoppingo-web
spec:
  template:
    spec:
      containers:
        - name: shoppingo-web
          image: 192.168.68.54:31834/shoppingo-web:0.1.17
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shoppingo-api
spec:
  template:
    spec:
      containers:
        - name: shoppingo-api
          image: 192.168.68.54:31834/shoppingo-api:0.1.17
